# loctrac

./: README.md  docs.txt  main.py  main.sh  mainv2.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
